<resources>
    <string name="app_name">MoneyMinds</string>
    <string name="transacciones">Transactions</string>
    <string name="informes">Reports</string>
    <string name="categorias">Categories</string>
    <string name="fecha">Date</string>
    <string name="ajustes">Settings</string>
    <string name="action_set">action set</string>
    <string name="saldo_total">Total balance</string>
    <string name="saldo_var">$0.00</string>
    <string name="todo">TODO</string>
    <string name="ingresos">Income</string>
    <string name="gastos">Expenses</string>
    <string name="periodo">Period</string>
    <string name="balance">Balance</string>
    <string name="gastos_por_categorias">Expenses by Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="money_minds">Money Minds</string>
    <string name="categorias_por_ingresos">Income by Category</string>
    <string name="agregar_gasto">Add Expense</string>
    <string name="agregar_ingreso">Add Income</string>
    <string name="agregar">Add</string>
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="categoria">Category</string>
    <string name="cantidad">Amount</string>
    <string name="agregar_categoria">Add Category</string>
    <string name="nombre_categoria">Name Category</string>
    <string name="toastIngresoText">Successful Added Income</string>
    <string name="toastGastoText">Successfully Added Expense</string>
    <string name="eliminar_gasto">Delete Expense</string>
    <string name="eliminar">Delete</string>
    <string name="elim_gas_succes">The Expense has been removed successfully</string>
    <string name="elim_gas_failed">Expense could not be deleted</string>
    <string name="categoria_elim_set">Category :</string>
    <string name="cantidad_elim_set">Amount:</string>
    <string name="fecha_elim_set">Date:</string>
    <string name="ingreso_elim_succes">Income was successfully deleted</string>
    <string name="cat_elim_succes">Category was successfully deleted</string>
    <string name="cat_elim_failed">The category cannot be deleted!</string>
    <string name="title_activity_ajustes">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
    </string>
    <string name="eliminar_datos">Delete Data</string>
    <string name="FAQ">MoneyMinds© - Version 1.0</string>
    <string name="regresar">Go back</string>
    <string name="warning_text">Deleted data cannot be recovered! Do you want to delete the data?</string>
    <string name="warning">Warning</string>
    <string name="aceptar">Accept</string>
    <string name="cleardata_success">The data has been deleted!</string>
    <string name="cat_add_success">Category Added successfully</string>
    <string name="data_cat_ingreso">Salary - Default</string>
    <string name="data_cat_ingreso2">Gift - Default</string>
    <string name="data_cat_gasto">Food - Default</string>
    <string name="data_cat_gasto2">Gift - Default</string>
    <string name="cat_add_in">Salary</string>
    <string name="cat_add_in2">Gift</string>
    <string name="cad_add_gas">Food</string>
    <string name="cat_add_gas2">Gift</string>
    <string name="eliminar_ingreso">Delete Entry</string>
    <string name="moneda">$</string>
    <string name="add_cat_error">An error occurred while entering data</string>
    <string name="eliminar_categorias">Delete Categories</string>
    <string name="descripcion">"Descripcion: "</string>
    <string name="desc1">Descripcion</string>
</resources>