<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#BCBCBC"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ui.Transacciones.Ajustes">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#7C7C7C"
        android:layout_marginBottom="10dp"
        android:text="@string/eliminar_datos"
        android:onClick="CleanDB"
        android:textSize="24sp" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#7C7C7C"
        android:layout_marginBottom="10dp"
        android:text="@string/eliminar_categorias"
        android:onClick="CleanCat"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#7C7C7C"
        android:text="@string/regresar"
        android:onClick="Volver"
        android:textSize="24sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:text="@string/FAQ"
        android:textSize="16sp" />

</LinearLayout>