<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    android:layout_marginBottom="200dp"
    android:orientation="vertical"
    tools:context=".ui.Info.infoIngresos">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/crdIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorias_por_ingresos"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/pieCat"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="6dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                app:egUseInnerValue="true"
                app:egInnerValueString="@string/saldo_var"
                app:egInnerPadding="50"
                app:egInnerPaddingOutline="10"
                app:egShowDecimal="true"
                app:egLegendTextSize="18sp"
                />

            <ListView
                android:id="@+id/lvGCat"
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </ListView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>