<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notiFrag"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Transacciones.TranFragment"
    tools:ignore="SpeakableTextPresentCheck">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/snAdd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_categoria"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="right|bottom"
        app:icon="@drawable/baseline_add_24"
        app:iconTint="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGas1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#0698E6"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/snAdd1"
        app:layout_constraintEnd_toEndOf="@+id/snAdd1"
        app:srcCompat="@drawable/add_gas"/>
    <TextView
        android:id="@+id/gas_action_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/gastos"
        app:layout_constraintBottom_toBottomOf="@+id/btnGas1"
        app:layout_constraintEnd_toStartOf="@+id/btnGas1"
        app:layout_constraintTop_toTopOf="@+id/btnGas1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnIng1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        android:backgroundTint="@color/green"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnGas1"
        app:layout_constraintEnd_toEndOf="@+id/snAdd1"
        app:srcCompat="@drawable/add_ing" />
    <TextView
        android:id="@+id/ing_action_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/ingresos"
        app:layout_constraintBottom_toBottomOf="@+id/btnIng1"
        app:layout_constraintEnd_toStartOf="@+id/btnIng1"
        app:layout_constraintTop_toTopOf="@+id/btnIng1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/ajustes"
        app:layout_constraintBottom_toTopOf="@+id/scView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <ScrollView
        android:id="@+id/scView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="478dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="fill_parent"
                    android:layout_height="500dp"
                    android:contentDescription="@string/ajustes"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteY="169dp" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>