<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.Transacciones.TranFragment"
    tools:ignore="SpeakableTextPresentCheck">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/snAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="right|bottom"
        app:icon="@drawable/baseline_add_24"
        app:iconTint="@color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FF4E4E"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/snAdd"
        app:layout_constraintEnd_toEndOf="@+id/snAdd"
        app:srcCompat="@drawable/add_gas"
        />
    <TextView
        android:id="@+id/gas_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/btnGas"
        app:layout_constraintEnd_toStartOf="@+id/btnGas"
        app:layout_constraintTop_toTopOf="@+id/btnGas" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnIng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        android:backgroundTint="@color/green"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/btnGas"
        app:layout_constraintEnd_toEndOf="@+id/snAdd"
        app:srcCompat="@drawable/add_ing" />
    <TextView
        android:id="@+id/ing_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/btnIng"
        app:layout_constraintEnd_toStartOf="@+id/btnIng"
        app:layout_constraintTop_toTopOf="@+id/btnIng" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <TextView
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textSize="15sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/saldo_total"
                            android:textAlignment="center"
                            android:textColor="?android:attr/textColorSecondary"

                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txt_total"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/saldo_var"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            android:textSize="30sp" />

                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/todo"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="15dp"
                                    android:src="@drawable/baseline_arrow_upward_24" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/ingresos" />

                                    <TextView
                                        android:id="@+id/txt_Ingreso"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/saldo_var"
                                        android:textAppearance="?attr/textAppearanceTitleMedium"
                                        android:textColor="@color/green"
                                        android:textSize="15sp" />


                                </LinearLayout>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/todo"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="15dp"
                                    android:src="@drawable/baseline_arrow_downward_24" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/gastos" />

                                    <TextView
                                        android:id="@+id/txtGasto"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/saldo_var"
                                        android:textAppearance="?attr/textAppearanceTitleMedium"
                                        android:textColor="@color/red"
                                        android:textSize="15sp" />


                                </LinearLayout>


                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/todo"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="15dp"
                                    android:src="@drawable/baseline_calendar_today_24" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView

                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/periodo" />

                                    <TextView
                                        android:id="@+id/txtFecha2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/fecha"
                                        android:textAppearance="?attr/textAppearanceTitleMedium"
                                        android:textColor="@color/second"
                                        android:textSize="15sp" />


                                </LinearLayout>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/todo"
                                    android:paddingTop="8dp"
                                    android:paddingEnd="15dp"
                                    android:src="@drawable/baseline_arrow_forward_24" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/balance" />

                                    <TextView
                                        android:id="@+id/txt_total_per"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/saldo_var"
                                        android:textAppearance="?attr/textAppearanceTitleMedium"
                                        android:textColor="@color/second"
                                        android:textSize="15sp" />


                                </LinearLayout>


                            </LinearLayout>

                        </LinearLayout>


                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <ListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="5dp"/>
                <ListView
                    android:id="@+id/list2"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>